--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "d3": "^5.16.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^5.3.3",
-    "react-scripts": "2.1.1",
+    "@reduxjs/toolkit": "^1.8.3",
+    "d3": "^7.6.1",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "redux-observable": "^1.2.0",
-    "styled-components": "^4.4.1"
+    "redux-observable": "^2.0.0",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -31,7 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^4.0.0"
   },
   "homepage": "https://danaoira.net"
 }
