WIP tic tac toe page

--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "/node_modules/(?!d3|d3-array|internmap)"
     ]
   },
-  "homepage": "https://danaoira.net"
+  "homepage": "https://danaoira.github.io/"
 }
