--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.1.0",
     "lodash": "^4.17.21",
@@ -14,7 +18,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-observable": "^2.0.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "predeploy": "npm run build",
