--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
-    "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react": "^18.0.24",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.1.0",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
+    "react": "^18.2.0",
     "redux-observable": "^2.0.0",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -30,15 +34,26 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not ie <= 11",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0",
     "jest-watch-typeahead": "^0.6.5"
   },
